--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,19 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/CSS/style.css" />
     <script defer src="/JS/script.js"></script>
-    <title>Black Holes & Golden Gates</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&family=Spicy+Rice&display=swap" rel="stylesheet">
+    <title>Snakes & Ladders</title>
   </head>
+
   <body onload="initializeGame()">
+
     <div id="game-container">
+
       <div id="pieces-container">
         <div id="pieces-highLight">
-          <div id="piece1" class="piece">💀</div>
-          <div id="piece2" class="piece">👽</div>
-          <div id="piece3" class="piece">🚀</div>
-          <div id="piece4" class="piece">🔥</div>
+          <div class="piece">💀</div>
+          <div class="piece">👽</div>
+          <div class="piece">🚀</div>
+          <div class="piece">🔥</div>
         </div>
       </div>
+
       <div id="board-side">
+        
         <div id="board">
           <div id="100" class="cell"></div>
           <div id="99" class="cell"></div>
@@ -129,37 +137,40 @@
           <div id="9" class="cell"></div>
           <div id="10" class="cell"></div>
         </div>
+
       </div>
+
       <div id="menu-container">
-        <h1 id="game-title">Black Holes & Golden Gates</h1>
+
+        <h1 id="game-title"><span id="snake">Snakes </span> & <span id="ladder"> Ladders</span></h1>
+
         <div id="msg-container">
           <h1>Game State</h1>
           <div id="current-positions">
-            <h2>💀 Current Position:</h2>
-            <h2>👽 Current Position:</h2>
-            <h2>🚀 Current Position:</h2>
-            <h2>🔥 Current Position:</h2>
+            <h2 class="current-position">💀 Current Position:</h2>
+            <h2 class="current-position">👽 Current Position:</h2>
+            <h2 class="current-position">🚀 Current Position:</h2>
+            <h2 class="current-position">🔥 Current Position:</h2>
           </div>
           <h2 id="msg"></h2>
         </div>
+
         <div id="diceContainer">
           <div id="diceScreen">
             <img id="diceImg" src="/IMGs/BlackBackground.png" alt="Dice" />
-            <!-- <img src="/IMGs/Dice Images/Face2.png" alt="Dice" />
-            <img src="/IMGs/Dice Images/Face3.png" alt="Dice" />
-            <img src="/IMGs/Dice Images/Face4.png" alt="Dice" />
-            <img src="/IMGs/Dice Images/Face5.png" alt="Dice" />
-            <img src="/IMGs/Dice Images/Face6.png" alt="Dice" /> -->
           </div>
         </div>
+
         <div id="btns-container">
           <div class="btn-div">
             <button class="btn-style" id="diceBtn">Roll The Dice</button>
           </div>
+
           <div class="btn-div">
             <button class="btn-style" id="rstButton">Play Again</button>
           </div>
         </div>
+
       </div>
     </div>
   </body>
