--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/style.css" />
-    <script defer src="/JS/script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&family=Spicy+Rice&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/style.css" />
+    <script defer src="JS/script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Londrina+Sketch&family=Spicy+Rice&display=swap"
+      rel="stylesheet"
+    />
     <title>Snakes & Ladders</title>
   </head>
 
   <body onload="initializeGame()">
-
     <div id="game-container">
-
       <div id="pieces-container">
         <div id="pieces-highLight">
           <div class="piece">💀</div>
@@ -25,7 +26,6 @@
       </div>
 
       <div id="board-side">
-        
         <div id="board">
           <div id="100" class="cell"></div>
           <div id="99" class="cell"></div>
@@ -137,12 +137,12 @@
           <div id="9" class="cell"></div>
           <div id="10" class="cell"></div>
         </div>
-
       </div>
 
       <div id="menu-container">
-
-        <h1 id="game-title"><span id="snake">Snakes </span> & <span id="ladder"> Ladders</span></h1>
+        <h1 id="game-title">
+          <span id="snake">Snakes </span> & <span id="ladder"> Ladders</span>
+        </h1>
 
         <div id="msg-container">
           <h1>Game State</h1>
@@ -170,7 +170,6 @@
             <button class="btn-style" id="rstButton">Play Again</button>
           </div>
         </div>
-
       </div>
     </div>
   </body>
