changed all paths

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div id="diceContainer">
           <div id="diceScreen">
-            <img id="diceImg" src="/IMGs/BlackBackground.png" alt="Dice" />
+            <img id="diceImg" src="BlackBackground.png" alt="Dice" />
           </div>
         </div>
 
